# sandbox

./: pyproject.toml
ansible-playbook/: playbook.yaml
ansible-playbook/extra_vars/: root_domain.yml
ansible-playbook/inventory/: config.yml
ansible-playbook/inventory/group_vars/: controller.yml
ansible-playbook/roles/print_vars/defaults/: main.yml
ansible-playbook/roles/print_vars/tasks/: main.yml
sandbox/sort_number_arrays/: sort_number_arrays.py
sandbox/word_counter/: word_counter.py  words.txt
